Marked up less CSS created containers to start styling accordingly

--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,109 @@ table {
   border-spacing: 0;
 }
 /* Your Code Goes Here */
+.container {
+  width: 1000px;
+  border-style: solid;
+  border-color: red;
+  border-width: 2px 10px 4px 20px;
+}
+.top-menu-content {
+  border-style: solid;
+  border-color: black;
+  border-width: 2px 10px 4px 20px;
+}
+.jumbotron {
+  border-style: solid;
+  border-color: green;
+  border-width: 2px 10px 4px 20px;
+}
+.top-content {
+  border-style: solid;
+  border-color: pink;
+  border-width: 2px 10px 4px 20px;
+}
+.smithJones {
+  border-style: solid;
+  border-color: yellow;
+  border-width: 2px 10px 4px 20px;
+}
+.pic1 {
+  border-style: solid;
+  border-color: paleturquoise;
+  border-width: 2px 10px 4px 20px;
+}
+.Futuristic {
+  border-style: solid;
+  border-color: purple;
+  border-width: 2px 10px 4px 20px;
+}
+.pic2 {
+  border-style: solid;
+  border-color: skyblue   ;
+  border-width: 2px 10px 4px 20px;
+}
+.main-content-bottom {
+  border-style: solid;
+  border-color: orange;
+  border-width: 2px 10px 4px 20px;
+}
+.villas {
+  border-style: solid;
+  border-color: blue;
+  border-width: 2px 10px 4px 20px;
+}
+.pic3 {
+  border-style: solid;
+  border-color: blueviolet;
+  border-width: 2px 10px 4px 20px;
+}
+.OUTSKIRTS {
+  border-style: solid;
+  border-color: salmon;
+  border-width: 2px 10px 4px 20px;
+}
+.pic4 {
+  border-style: solid;
+  border-color: slateblue;
+  border-width: 2px 10px 4px 20px;
+}
+.THEBLOCKS {
+  border-style: solid;
+  border-color: royalblue;
+  border-width: 2px 10px 4px 20px;
+}
+.pic5 {
+  border-style: solid;
+  border-color: wheat;
+  border-width: 2px 10px 4px 20px;
+}
+.footer-content {
+  border-style: solid;
+  border-color: teal;
+  border-width: 2px 10px 4px 20px;
+}
+.email {
+  border-style: solid;
+  border-color: blueviolet;
+  border-width: 2px 10px 4px 20px;
+}
+.NewYork {
+  border-style: solid;
+  border-color: plum;
+  border-width: 2px 10px 4px 20px;
+}
+.Florida {
+  border-style: solid;
+  border-color: peru;
+  border-width: 2px 10px 4px 20px;
+}
+.California {
+  border-style: solid;
+  border-color: powderblue;
+  border-width: 2px 10px 4px 20px;
+}
+.copyright {
+  border-style: solid;
+  border-color: palegreen;
+  border-width: 2px 10px 4px 20px;
+}
