--- a/less/index.less
+++ b/less/index.less
@@ -58,3 +58,150 @@ table{
 }
 
 /* Your Code Goes Here */
+
+.container {
+  width: 1000px;
+  border-style: solid;
+  border-color: red;
+  border-width: 2px 10px 4px 20px;
+}
+
+.top-menu-content {
+  // width: 1000px;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px 10px 4px 20px;
+}
+
+.jumbotron {
+  // width: 1000px;
+  border-style: solid;
+  border-color: green;
+  border-width: 2px 10px 4px 20px;
+}
+
+.top-content {
+  // width: 1000px;
+  border-style: solid;
+  border-color: pink;
+  border-width: 2px 10px 4px 20px;
+}
+
+.smithJones {
+  // width: 1000px;
+  border-style: solid;
+  border-color: yellow;
+  border-width: 2px 10px 4px 20px;
+}
+
+.pic1 {
+  // width: 1000px;
+  border-style: solid;
+  border-color: paleturquoise;
+  border-width: 2px 10px 4px 20px;
+}
+
+.Futuristic {
+  // width: 1000px;
+  border-style: solid;
+  border-color: purple;
+  border-width: 2px 10px 4px 20px;
+}
+
+.pic2 {
+  // width: 1000px;
+  border-style: solid;
+  border-color: skyblue   ;
+  border-width: 2px 10px 4px 20px;
+}
+
+.main-content-bottom {
+  // width: 1000px;
+  border-style: solid;
+  border-color: orange;
+  border-width: 2px 10px 4px 20px;
+}
+
+.villas {
+  // width: 1000px;
+  border-style: solid;
+  border-color: blue;
+  border-width: 2px 10px 4px 20px;
+}
+
+.pic3 {
+  // width: 1000px;
+  border-style: solid;
+  border-color: blueviolet;
+  border-width: 2px 10px 4px 20px;
+}
+
+.OUTSKIRTS {
+  // width: 1000px;
+  border-style: solid;
+  border-color: salmon;
+  border-width: 2px 10px 4px 20px;
+}
+
+.pic4 {
+  // width: 1000px;
+  border-style: solid;
+  border-color: slateblue;
+  border-width: 2px 10px 4px 20px;
+}
+
+.THEBLOCKS {
+  // width: 1000px;
+  border-style: solid;
+  border-color: royalblue;
+  border-width: 2px 10px 4px 20px;
+}
+
+.pic5 {
+  // width: 1000px;
+  border-style: solid;
+  border-color: wheat;
+  border-width: 2px 10px 4px 20px;
+}
+
+.footer-content {
+  // width: 1000px;
+  border-style: solid;
+  border-color: teal;
+  border-width: 2px 10px 4px 20px;
+}
+
+.email {
+  // width: 1000px;
+  border-style: solid;
+  border-color: blueviolet;
+  border-width: 2px 10px 4px 20px;
+}
+
+.NewYork {
+  // width: 1000px;
+  border-style: solid;
+  border-color: plum;
+  border-width: 2px 10px 4px 20px;
+}
+
+.Florida {
+  // width: 1000px;
+  border-style: solid;
+  border-color: peru;
+  border-width: 2px 10px 4px 20px;
+}
+
+.California {
+  // width: 1000px;
+  border-style: solid;
+  border-color: powderblue;
+  border-width: 2px 10px 4px 20px;
+}
+
+.copyright {
+  // width: 1000px;
+  border-style: solid;
+  border-color: palegreen;
+  border-width: 2px 10px 4px 20px;
+}
