--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,7 @@ section {
 }
 body {
   line-height: 1;
+  font-family: "Arial", sans-serif;
 }
 ol,
 ul {
@@ -133,109 +134,157 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+img {
+  max-width: 100%;
+}
 /* Your Code Goes Here */
+.top-menu-content {
+  max-width: 100%;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px 10px 4px 20px;
+  background-color: #9ca5af;
+  color: white;
+}
+.top-menu-content .container {
+  display: flex;
+  justify-content: space-between;
+}
+.top-menu-content h2,
+.top-menu-content nav {
+  display: inline-block;
+}
+.jumbotron {
+  display: flex;
+  align-items: flex-end;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 75px;
+  border-style: solid;
+  border-color: green;
+  border-width: 2px 10px 4px 20px;
+  min-height: 600px;
+  background-image: url("../img/home/home-jumbotron.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 100px;
+}
+.project-header {
+  position: relative;
+}
+.project-header h3 {
+  color: white;
+  position: absolute;
+  display: inline-block;
+  padding: 20px 30px;
+  background-color: gray;
+  bottom: -13px;
+  right: 54px;
+}
+.project-content {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 75px 0;
+}
+.project-content p:not(:last-child) {
+  margin-bottom: 20px;
+}
+footer h4 {
+  margin-bottom: 15px;
+}
+footer > div {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+footer > div > div {
+  padding: 10px 15px;
+}
+footer > div > div > p {
+  line-height: 1.6rem;
+}
+footer .copyright {
+  text-align: center;
+}
 .container {
-  width: 1000px;
+  max-width: 1000px;
   border-style: solid;
   border-color: red;
   border-width: 2px 10px 4px 20px;
 }
-.top-menu-content {
-  border-style: solid;
-  border-color: black;
-  border-width: 2px 10px 4px 20px;
-}
-.jumbotron {
-  border-style: solid;
-  border-color: green;
-  border-width: 2px 10px 4px 20px;
-}
-.top-content {
+.container .top-content {
   border-style: solid;
   border-color: pink;
   border-width: 2px 10px 4px 20px;
 }
-.smithJones {
-  border-style: solid;
-  border-color: yellow;
-  border-width: 2px 10px 4px 20px;
+.container .card {
+  display: flex;
 }
-.pic1 {
-  border-style: solid;
-  border-color: paleturquoise;
-  border-width: 2px 10px 4px 20px;
+.container .card .img-right {
+  order: 2;
 }
-.Futuristic {
-  border-style: solid;
-  border-color: purple;
-  border-width: 2px 10px 4px 20px;
-}
-.pic2 {
-  border-style: solid;
-  border-color: skyblue   ;
-  border-width: 2px 10px 4px 20px;
-}
-.main-content-bottom {
+.container .main-content-bottom {
   border-style: solid;
   border-color: orange;
   border-width: 2px 10px 4px 20px;
 }
-.villas {
+.container .villas {
   border-style: solid;
   border-color: blue;
   border-width: 2px 10px 4px 20px;
 }
-.pic3 {
+.container .pic3 {
   border-style: solid;
   border-color: blueviolet;
   border-width: 2px 10px 4px 20px;
 }
-.OUTSKIRTS {
+.container .OUTSKIRTS {
   border-style: solid;
   border-color: salmon;
   border-width: 2px 10px 4px 20px;
 }
-.pic4 {
+.container .pic4 {
   border-style: solid;
   border-color: slateblue;
   border-width: 2px 10px 4px 20px;
 }
-.THEBLOCKS {
+.container .THEBLOCKS {
   border-style: solid;
   border-color: royalblue;
   border-width: 2px 10px 4px 20px;
 }
-.pic5 {
+.container .pic5 {
   border-style: solid;
   border-color: wheat;
   border-width: 2px 10px 4px 20px;
 }
-.footer-content {
+.container .footer-content {
   border-style: solid;
   border-color: teal;
   border-width: 2px 10px 4px 20px;
 }
-.email {
+.container .email {
   border-style: solid;
   border-color: blueviolet;
   border-width: 2px 10px 4px 20px;
 }
-.NewYork {
+.container .NewYork {
   border-style: solid;
   border-color: plum;
   border-width: 2px 10px 4px 20px;
 }
-.Florida {
+.container .Florida {
   border-style: solid;
   border-color: peru;
   border-width: 2px 10px 4px 20px;
 }
-.California {
+.container .California {
   border-style: solid;
   border-color: powderblue;
   border-width: 2px 10px 4px 20px;
 }
-.copyright {
+.container .copyright {
   border-style: solid;
   border-color: palegreen;
   border-width: 2px 10px 4px 20px;
