Fixed index.html, fixed index.less. Completed index.html

--- a/css/index.css
+++ b/css/index.css
@@ -139,20 +139,34 @@ img {
 }
 /* Your Code Goes Here */
 .top-menu-content {
+  display: flex;
+  justify-content: space-between;
   max-width: 100%;
   border-style: solid;
   border-color: black;
   border-width: 2px 10px 4px 20px;
   background-color: #9ca5af;
   color: white;
+  Font-Family: Roboto, Arial, sans-serif;
+  font-size: 16px;
 }
 .top-menu-content .container {
   display: flex;
   justify-content: space-between;
+  width: 1000px;
 }
-.top-menu-content h2,
+.top-menu-content .brand {
+  font-size: 28px;
+}
 .top-menu-content nav {
   display: inline-block;
+}
+.top-menu-content span {
+  font-size: 1.8rem;
+  color: white;
+}
+.top-menu-content .dropdown-content {
+  display: none;
 }
 .jumbotron {
   display: flex;
@@ -170,25 +184,98 @@ img {
   background-size: cover;
   padding-bottom: 100px;
 }
+.top-content {
+  display: flex;
+  justify-content: center;
+  padding: 25px;
+}
+.card-content {
+  Font-Family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 67px;
+  margin: 10px;
+  align-items: center;
+}
+.card-content > h3 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.card-content p {
+  margin-bottom: 15px;
+}
+.card-content .button {
+  border: 1px solid #222;
+  padding: 15px 25px;
+  width: 150px;
+  font-size: 1rem;
+  min-width: 160px;
+}
+.card {
+  display: flex;
+}
+.card .img-right {
+  order: 2;
+}
+.main-content-bottom {
+  display: flex;
+  justify-content: center;
+}
+.main-content-bottom h2 {
+  font-size: 30px;
+  padding: 10px;
+}
+.main-content-bottom h3 {
+  font-weight: bold;
+  font-size: 28px;
+}
+.main-content-bottom .container {
+  width: 1000px;
+}
 .project-header {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 .project-header h3 {
-  color: white;
+  color: Black;
   position: absolute;
   display: inline-block;
   padding: 20px 30px;
-  background-color: gray;
+  background-color: #D8D8D8;
   bottom: -13px;
-  right: 54px;
+  font-family: Roboto, Arial, sans-serif;
+}
+.project-header .right-detail {
+  right: 72px;
+  font-weight: 300;
+}
+.project-header .left-detail {
+  left: 72px;
+  font-weight: 300;
+  color: #222;
 }
 .project-content {
   max-width: 500px;
   margin: 0 auto;
   padding: 75px 0;
 }
+.project-content > p {
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+}
 .project-content p:not(:last-child) {
   margin-bottom: 20px;
+}
+footer {
+  background: #828282;
+  color: white;
+}
+footer .form-input {
+  padding: 10px;
+  width: 275px;
 }
 footer h4 {
   margin-bottom: 15px;
@@ -199,12 +286,20 @@ footer > div {
   margin-bottom: 20px;
 }
 footer > div > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 10px 15px;
+  align-self: stretch;
 }
 footer > div > div > p {
   line-height: 1.6rem;
+  display: block;
 }
-footer .copyright {
+footer form {
+  margin: 20px 0;
+}
+.copyright {
   text-align: center;
 }
 .container {
@@ -218,45 +313,9 @@ footer .copyright {
   border-color: pink;
   border-width: 2px 10px 4px 20px;
 }
-.container .card {
-  display: flex;
-}
-.container .card .img-right {
-  order: 2;
-}
 .container .main-content-bottom {
   border-style: solid;
   border-color: orange;
-  border-width: 2px 10px 4px 20px;
-}
-.container .villas {
-  border-style: solid;
-  border-color: blue;
-  border-width: 2px 10px 4px 20px;
-}
-.container .pic3 {
-  border-style: solid;
-  border-color: blueviolet;
-  border-width: 2px 10px 4px 20px;
-}
-.container .OUTSKIRTS {
-  border-style: solid;
-  border-color: salmon;
-  border-width: 2px 10px 4px 20px;
-}
-.container .pic4 {
-  border-style: solid;
-  border-color: slateblue;
-  border-width: 2px 10px 4px 20px;
-}
-.container .THEBLOCKS {
-  border-style: solid;
-  border-color: royalblue;
-  border-width: 2px 10px 4px 20px;
-}
-.container .pic5 {
-  border-style: solid;
-  border-color: wheat;
   border-width: 2px 10px 4px 20px;
 }
 .container .footer-content {
@@ -269,23 +328,42 @@ footer .copyright {
   border-color: blueviolet;
   border-width: 2px 10px 4px 20px;
 }
-.container .NewYork {
-  border-style: solid;
-  border-color: plum;
-  border-width: 2px 10px 4px 20px;
-}
-.container .Florida {
-  border-style: solid;
-  border-color: peru;
-  border-width: 2px 10px 4px 20px;
-}
-.container .California {
-  border-style: solid;
-  border-color: powderblue;
-  border-width: 2px 10px 4px 20px;
-}
 .container .copyright {
   border-style: solid;
   border-color: palegreen;
   border-width: 2px 10px 4px 20px;
+}
+.container-services {
+  border: 10px solid black;
+  width: 53.3%;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+}
+.jumbotron-services {
+  border: 10px solid pink;
+}
+.tabs-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 50px 0;
+}
+.tabs-link {
+  border: 1px solid black;
+  padding: 20px;
+  font-weight: bold;
+}
+.tabs-link:hover {
+  background-color: #222;
+  color: #FFF;
+}
+.tabs-link-selected {
+  background-color: #5E9FB9;
+}
+.tabs-items {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
 }
