--- a/less/index.less
+++ b/less/index.less
@@ -64,25 +64,51 @@ img {
 
 /* Your Code Goes Here */
 
+
+
+// TOP MENU CONTENT 
+
 .top-menu-content {
   // width: 1000px;
+  display: flex;
+  justify-content: space-between;
   max-width: 100%;
   border-style: solid;
   border-color: black;
   border-width: 2px 10px 4px 20px;
   background-color: rgb(156, 165, 175);
   color: white;
+  Font-Family: Roboto, Arial, sans-serif;
+  font-size: 16px;
 
   .container {
     display: flex;
     justify-content: space-between;
+    // align-items: center;
+    width: 1000px;
   }
 
-  h2,
+  .brand {
+    font-size: 28px;
+  }
+
   nav {
     display: inline-block;
   }
+
+  span {
+    font-size: 1.8rem;
+    color: white;
+  }
+
+  .dropdown-content {
+    display: none;
+  }
+
+
 }
+
+
 
 .jumbotron {
   // width: 1000px;
@@ -102,18 +128,105 @@ img {
   padding-bottom: 100px;
 }
 
+// TOP CONTENT BEGINNING 
+
+.top-content {
+  display: flex;
+  justify-content: center;
+  padding: 25px;
+}
+
+
+.card-content {
+  Font-Family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 67px;
+  margin: 10px;
+  align-items: center;
+
+  > h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 15px;
+  }
+
+  p {
+    margin-bottom: 15px;
+  }
+
+  .button {
+    border: 1px solid #222;
+    padding: 15px 25px;
+    width: 150px;
+
+    font-size: 1rem;
+    min-width: 160px;
+  }
+
+}
+
+.card {
+  display: flex;
+
+  .img-right {
+    order: 2;
+  }
+}
+
+
+
+
+// MAIN CONTENT BEGINNING 
+
+
+.main-content-bottom {
+  display: flex;
+  justify-content: center;
+
+
+  h2 {
+    font-size: 30px;
+    padding: 10px;
+  }
+
+  h3 {
+    font-weight: bold;
+    font-size: 28px;
+  }
+
+.container {
+  width: 1000px;
+}
+
+}
+
 .project {
   &-header {
     position: relative;
+    display: flex;
+    justify-content: center;
+    
 
     h3 {
-      color: white;
+      color: Black;
       position: absolute;
       display: inline-block;
       padding: 20px 30px;
-      background-color: gray;
+      background-color: #D8D8D8;
       bottom: -13px;
-      right: 54px;
+      font-family: Roboto, Arial, sans-serif;
+    }
+
+    .right-detail {
+      right: 72px;
+      font-weight: 300;
+    }
+
+    .left-detail {
+      left: 72px;
+      font-weight: 300;
+      color: #222;
     }
   }
 
@@ -122,13 +235,30 @@ img {
     margin: 0 auto;
     padding: 75px 0;
 
+    > p {
+      font-family: Roboto, Arial, sans-serif;
+      font-size: 16px;
+      line-height: 24px;
+
+    }
+
     p:not(:last-child) {
       margin-bottom: 20px;
     }
   }
 }
 
+// FOOTER BEGINS HERE
+
 footer {
+  background: #828282;
+  color: white;
+
+  .form-input {
+    padding: 10px;
+    width: 275px;
+  }
+
   h4 {
     margin-bottom: 15px;
   }
@@ -139,19 +269,29 @@ footer {
     margin-bottom: 20px;
 
     > div {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       padding: 10px 15px;
+      align-self: stretch;
 
       > p {
         line-height: 1.6rem;
+        display: block;
       }
     }
   }
 
-  .copyright {
-    text-align: center;
+  form {
+    margin: 20px 0;
   }
 }
 
+
+
+.copyright {
+  text-align: center;
+}
 
 .container {
   max-width: 1000px;
@@ -166,14 +306,6 @@ footer {
     border-width: 2px 10px 4px 20px;
   }
 
-  .card {
-    display: flex;
-  
-    .img-right {
-      order: 2;
-    }
-  }
-  
   
   .main-content-bottom {
     // width: 1000px;
@@ -181,49 +313,6 @@ footer {
     border-color: orange;
     border-width: 2px 10px 4px 20px;
   }
-  
-  .villas {
-    // width: 1000px;
-    border-style: solid;
-    border-color: blue;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .pic3 {
-    // width: 1000px;
-    border-style: solid;
-    border-color: blueviolet;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .OUTSKIRTS {
-    // width: 1000px;
-    border-style: solid;
-    border-color: salmon;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .pic4 {
-    // width: 1000px;
-    border-style: solid;
-    border-color: slateblue;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .THEBLOCKS {
-    // width: 1000px;
-    border-style: solid;
-    border-color: royalblue;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .pic5 {
-    // width: 1000px;
-    border-style: solid;
-    border-color: wheat;
-    border-width: 2px 10px 4px 20px;
-  }
-  
   .footer-content {
     // width: 1000px;
     border-style: solid;
@@ -238,27 +327,6 @@ footer {
     border-width: 2px 10px 4px 20px;
   }
   
-  .NewYork {
-    // width: 1000px;
-    border-style: solid;
-    border-color: plum;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .Florida {
-    // width: 1000px;
-    border-style: solid;
-    border-color: peru;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .California {
-    // width: 1000px;
-    border-style: solid;
-    border-color: powderblue;
-    border-width: 2px 10px 4px 20px;
-  }
-  
   .copyright {
     // width: 1000px;
     border-style: solid;
@@ -268,3 +336,56 @@ footer {
 
 
 }
+
+
+
+
+// SERVICES TAB 
+
+
+.container-services {
+  border: 10px solid black;
+  width: 53.3%;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+}
+
+.jumbotron-services {
+  border: 10px solid pink;
+}
+
+.tabs-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 50px 0;
+}
+
+//   - Tab selected background: #5E9FB9
+// - Tab Hover background: #222222
+// - Tab Hover color: #FFF;
+
+.tabs-link {
+  border: 1px solid black;
+  padding: 20px;
+  font-weight: bold;
+}
+
+.tabs-link:hover {
+  background-color: #222;
+  color: #FFF;
+}
+
+.tabs-link-selected {
+  background-color: #5E9FB9;
+}
+
+.tabs-items {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+}
+
+
