--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,6 @@ img {
   max-width: 100%;
   border-style: solid;
   border-color: black;
-  border-width: 2px 10px 4px 20px;
   background-color: #9ca5af;
   color: white;
   Font-Family: Roboto, Arial, sans-serif;
@@ -171,12 +170,10 @@ img {
 .jumbotron {
   display: flex;
   align-items: flex-end;
-  color: #FFFFFF;
   font-weight: bold;
   font-size: 64px;
   line-height: 75px;
-  border-style: solid;
-  border-color: green;
+  color: white;
   border-width: 2px 10px 4px 20px;
   min-height: 600px;
   background-image: url("../img/home/home-jumbotron.png");
@@ -302,40 +299,9 @@ footer form {
 .copyright {
   text-align: center;
 }
-.container {
-  max-width: 1000px;
-  border-style: solid;
-  border-color: red;
-  border-width: 2px 10px 4px 20px;
-}
-.container .top-content {
-  border-style: solid;
-  border-color: pink;
-  border-width: 2px 10px 4px 20px;
-}
-.container .main-content-bottom {
-  border-style: solid;
-  border-color: orange;
-  border-width: 2px 10px 4px 20px;
-}
-.container .footer-content {
-  border-style: solid;
-  border-color: teal;
-  border-width: 2px 10px 4px 20px;
-}
-.container .email {
-  border-style: solid;
-  border-color: blueviolet;
-  border-width: 2px 10px 4px 20px;
-}
-.container .copyright {
-  border-style: solid;
-  border-color: palegreen;
-  border-width: 2px 10px 4px 20px;
-}
 .container-services {
   border: 10px solid black;
-  width: 53.3%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   position: relative;
