--- a/less/index.less
+++ b/less/index.less
@@ -75,7 +75,7 @@ img {
   max-width: 100%;
   border-style: solid;
   border-color: black;
-  border-width: 2px 10px 4px 20px;
+  // border-width: 2px 10px 4px 20px;
   background-color: rgb(156, 165, 175);
   color: white;
   Font-Family: Roboto, Arial, sans-serif;
@@ -114,12 +114,13 @@ img {
   // width: 1000px;
   display: flex;
   align-items: flex-end;
-  color: #FFFFFF;
+  // color: #FFFFFF;
   font-weight: bold;
   font-size: 64px;
   line-height: 75px;
-  border-style: solid;
-  border-color: green;
+  // border-style: solid;
+  // border-color: green;
+  color: white;
   border-width: 2px 10px 4px 20px;
   min-height: 600px;
   background-image: url("../img/home/home-jumbotron.png");
@@ -293,51 +294,6 @@ footer {
   text-align: center;
 }
 
-.container {
-  max-width: 1000px;
-  border-style: solid;
-  border-color: red;
-  border-width: 2px 10px 4px 20px;
-  
-  .top-content {
-    // width: 1000px;
-    border-style: solid;
-    border-color: pink;
-    border-width: 2px 10px 4px 20px;
-  }
-
-  
-  .main-content-bottom {
-    // width: 1000px;
-    border-style: solid;
-    border-color: orange;
-    border-width: 2px 10px 4px 20px;
-  }
-  .footer-content {
-    // width: 1000px;
-    border-style: solid;
-    border-color: teal;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .email {
-    // width: 1000px;
-    border-style: solid;
-    border-color: blueviolet;
-    border-width: 2px 10px 4px 20px;
-  }
-  
-  .copyright {
-    // width: 1000px;
-    border-style: solid;
-    border-color: palegreen;
-    border-width: 2px 10px 4px 20px;
-  }
-
-
-}
-
-
 
 
 // SERVICES TAB 
@@ -345,7 +301,7 @@ footer {
 
 .container-services {
   border: 10px solid black;
-  width: 53.3%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   position: relative;
