--- a/css/index.css
+++ b/css/index.css
@@ -299,16 +299,82 @@ footer form {
 .copyright {
   text-align: center;
 }
+.container {
+  max-width: 1000px;
+  border-width: 2px 10px 4px 20px;
+}
+.container .top-content {
+  border-style: solid;
+  border-color: pink;
+  border-width: 2px 10px 4px 20px;
+}
+.container .main-content-bottom {
+  border-style: solid;
+  border-color: orange;
+  border-width: 2px 10px 4px 20px;
+}
+.container .footer-content {
+  border-style: solid;
+  border-color: teal;
+  border-width: 2px 10px 4px 20px;
+}
+.container .email {
+  border-style: solid;
+  border-color: blueviolet;
+  border-width: 2px 10px 4px 20px;
+}
+.container .copyright {
+  border-style: solid;
+  border-color: palegreen;
+  border-width: 2px 10px 4px 20px;
+}
 .container-services {
-  border: 10px solid black;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   position: relative;
   font-family: 'Roboto', sans-serif;
 }
-.jumbotron-services {
-  border: 10px solid pink;
+.container-services header {
+  width: 100%;
+  margin: 0 auto;
+  border: 10 px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+}
+.container-services header nav {
+  width: 100%;
+  border: 10px solid green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container-services header nav a {
+  display: flex;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  border: 20px solid blue;
+  margin: 0 85px;
+}
+.container-services h1 {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 75px;
+  color: #fff;
+  position: relative;
+  margin-top: -100px;
+  margin-left: 100px;
+}
+.top-paragraph {
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px;
+  font-weight: regular;
+  font-size: 16px;
+  line-height: 24px;
 }
 .tabs-links {
   display: flex;
@@ -318,8 +384,18 @@ footer form {
 }
 .tabs-link {
   border: 1px solid black;
-  padding: 20px;
+  padding: 30px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  justify-content: center;
+}
+.section-tabs {
+  display: flex;
+  border: 10px solid orange;
+  justify-content: center;
+  width: 100%;
 }
 .tabs-link:hover {
   background-color: #222;
@@ -330,6 +406,22 @@ footer form {
 }
 .tabs-items {
   display: flex;
+  width: 100%;
+  border: 10px solid pink;
+}
+.tabs-items .tabs-item-selected {
+  display: flex;
   flex-direction: row;
-  width: 80%;
+}
+.tabs-items h2 {
+  font-size: 24px;
+  font-weight: Regular;
+  margin-bottom: 15px;
+}
+.tabs-items .content {
+  padding: 60px;
+  line-height: 24px;
+}
+.tabs-items .img {
+  border: 10px solid black;
 }
