--- a/less/index.less
+++ b/less/index.less
@@ -170,6 +170,7 @@ img {
 .card {
   display: flex;
 
+
   .img-right {
     order: 2;
   }
@@ -296,11 +297,54 @@ footer {
 
 
 
+.container {
+  max-width: 1000px;
+  // border-style: solid;
+  // border-color: red;
+  border-width: 2px 10px 4px 20px;
+
+  .top-content {
+    // width: 1000px;
+    border-style: solid;
+    border-color: pink;
+    border-width: 2px 10px 4px 20px;
+  }
+
+
+  .main-content-bottom {
+    // width: 1000px;
+    border-style: solid;
+    border-color: orange;
+    border-width: 2px 10px 4px 20px;
+  }
+  .footer-content {
+    // width: 1000px;
+    border-style: solid;
+    border-color: teal;
+    border-width: 2px 10px 4px 20px;
+  }
+
+  .email {
+    // width: 1000px;
+    border-style: solid;
+    border-color: blueviolet;
+    border-width: 2px 10px 4px 20px;
+  }
+
+  .copyright {
+    // width: 1000px;
+    border-style: solid;
+    border-color: palegreen;
+    border-width: 2px 10px 4px 20px;
+  }
+}
+
+
 // SERVICES TAB 
 
 
 .container-services {
-  border: 10px solid black;
+  // border: 10px solid black;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -308,8 +352,55 @@ footer {
   font-family: 'Roboto', sans-serif;
 }
 
-.jumbotron-services {
-  border: 10px solid pink;
+.container-services header {
+  width: 100%;
+  margin: 0 auto;
+  border: 10 px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container-services header nav {
+  width: 100%;
+  border: 10px solid green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container-services header nav a {
+  display: flex;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  border: 20px solid blue;
+  margin: 0 85px;
+}
+
+.container-services h1 {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 75px;
+  color: #fff;
+  position: relative;
+  margin-top: -100px;
+  margin-left: 100px;
+}
+
+.container-services img {
+  // width: 100%;
+}
+
+.top-paragraph {
+  width: 80%;
+  margin: 0 auto;
+  // border: 20px solid purple;
+  padding: 50px;
+  font-weight: regular;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .tabs-links {
@@ -325,8 +416,19 @@ footer {
 
 .tabs-link {
   border: 1px solid black;
-  padding: 20px;
+  padding: 30px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  justify-content: center;
+}
+
+.section-tabs {
+  display: flex;
+  border: 10px solid orange;
+  justify-content: center;
+  width: 100%; 
 }
 
 .tabs-link:hover {
@@ -340,8 +442,30 @@ footer {
 
 .tabs-items {
   display: flex;
-  flex-direction: row;
-  width: 80%;
+  width: 100%;
+  border: 10px solid pink;
+
+  .tabs-item-selected {
+    display: flex;
+    flex-direction: row;
+  }
+
+  h2 {
+    font-size: 24px;
+    font-weight: Regular;
+    margin-bottom: 15px;
+  }
+
+  .content {
+    // border: 10px solid black;
+    padding: 60px;
+    line-height: 24px;
+  }
+
+  .img {
+    border: 10px solid black;
+  }
+
 }
 
 
