--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,9 @@ img {
   max-width: 100%;
 }
 /* Your Code Goes Here */
+html {
+  font-size: 62.5%;
+}
 .top-menu-content {
   display: flex;
   justify-content: space-between;
@@ -328,6 +331,28 @@ footer form {
   border-color: palegreen;
   border-width: 2px 10px 4px 20px;
 }
+@media (max-width: 500px) {
+  .navigation {
+    padding: 10px;
+  }
+  .navigation span {
+    font-size: 2.4rem;
+    font-family: sans-serif;
+  }
+  .jumbotron {
+    display: flex;
+    align-items: flex-end;
+    font-weight: bold;
+    line-height: 75px;
+    color: white;
+    border-width: 2px 10px 4px 20px;
+    height: 40vh;
+    width: 100%;
+    background-image: url("../img/home/home-mobile-jumbotron.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
 .container-services {
   width: 100%;
   display: flex;
@@ -338,7 +363,6 @@ footer form {
 .container-services header {
   width: 100%;
   margin: 0 auto;
-  border: 10 px solid black;
   display: flex;
   flex-wrap: wrap;
   position: relative;
@@ -346,7 +370,6 @@ footer form {
 }
 .container-services header nav {
   width: 100%;
-  border: 10px solid green;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -356,7 +379,6 @@ footer form {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  border: 20px solid blue;
   margin: 0 85px;
 }
 .container-services h1 {
@@ -393,7 +415,6 @@ footer form {
 }
 .section-tabs {
   display: flex;
-  border: 10px solid orange;
   justify-content: center;
   width: 100%;
 }
@@ -407,7 +428,6 @@ footer form {
 .tabs-items {
   display: flex;
   width: 100%;
-  border: 10px solid pink;
 }
 .tabs-items .tabs-item-selected {
   display: flex;
@@ -422,6 +442,104 @@ footer form {
   padding: 60px;
   line-height: 24px;
 }
-.tabs-items .img {
-  border: 10px solid black;
+.container-contact {
+  margin: 37px;
+  display: flex;
+  flex-direction: row;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+}
+.container-contact h2 {
+  font-size: 24px;
+  padding-bottom: 38px;
+  font-weight: bold;
+}
+.container-contact .email {
+  margin: 40px;
+}
+.container-contact .buildings {
+  margin: 40px;
+  width: 137%;
+}
+.container-contact .overview {
+  margin: 40px;
+  width: 137%;
+}
+.container-contact .radio {
+  margin: 40px;
+}
+.container-contact .button {
+  border: 1px solid #222;
+  padding: 15px 25px;
+  width: 150px;
+  font-size: 1rem;
+  min-width: 160px;
+}
+.form-needs {
+  width: 58%;
+  height: 161px;
+}
+.form-input {
+  width: 96%;
+  height: 31px;
+}
+.container-bottom {
+  margin: 40px;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+}
+.dropbtn {
+  background-color: white;
+  color: white;
+  padding: 1px;
+  font-size: 16px;
+  border: 1px solid black;
+  width: 58%;
+  height: 32px;
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+/* Change color of dropdown links on hover */
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.flex-container-2 {
+  display: flex;
+  flex-direction: column;
+}
+.flex-container-2 .paragraphs {
+  padding-bottom: 73px;
+}
+.flex-container-2 h2 {
+  font-size: 28px;
+  font-weight: bold;
+}
+.flex-container-2 h4 {
+  font-weight: bold;
+}
+.flex-container-2 p {
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 16px;
 }
