--- a/css/index.css
+++ b/css/index.css
@@ -184,39 +184,45 @@ html {
   background-size: cover;
   padding-bottom: 100px;
 }
+.main-content {
+  max-width: 1200px;
+  width: 100%;
+}
 .top-content {
   display: flex;
   justify-content: center;
-  padding: 25px;
+  padding: 40px 25px;
 }
-.card-content {
+.inverse-content {
+  display: flex;
+  justify-content: center;
+  padding: 40px 25px;
+}
+.text-content {
   Font-Family: Roboto, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 24px;
-  padding: 67px;
+  padding-top: 30px;
   margin: 10px;
   align-items: center;
+  width: 48%;
 }
-.card-content > h3 {
-  font-size: 24px;
+.text-content h2 {
+  font-size: 1.8rem;
   font-weight: bold;
+  margin-bottom: 10px;
+}
+.text-content p {
   margin-bottom: 15px;
 }
-.card-content p {
-  margin-bottom: 15px;
-}
-.card-content .button {
+.text-content button {
   border: 1px solid #222;
   padding: 15px 25px;
-  width: 150px;
+  width: 120px;
   font-size: 1rem;
-  min-width: 160px;
 }
-.card {
-  display: flex;
-}
-.card .img-right {
-  order: 2;
+.img-content {
+  width: 48%;
 }
 .main-content-bottom {
   display: flex;
@@ -237,6 +243,8 @@ html {
   position: relative;
   display: flex;
   justify-content: center;
+  max-width: 1100px;
+  width: 100%;
 }
 .project-header h3 {
   color: Black;
@@ -256,6 +264,9 @@ html {
   font-weight: 300;
   color: #222;
 }
+.project .mobile-img {
+  display: none;
+}
 .project-content {
   max-width: 500px;
   margin: 0 auto;
@@ -272,35 +283,41 @@ html {
 footer {
   background: #828282;
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+footer .contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 40px 0;
 }
 footer .form-input {
   padding: 10px;
-  width: 275px;
+  width: 200px;
+  margin-bottom: 10px;
 }
-footer h4 {
-  margin-bottom: 15px;
+footer h3 {
+  font-size: 1.6rem;
+  margin-bottom: 10px;
 }
-footer > div {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-footer > div > div {
+footer .state-info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px 15px;
   align-self: stretch;
 }
-footer > div > div > p {
-  line-height: 1.6rem;
+footer p {
+  line-height: 0.2rem;
   display: block;
 }
 footer form {
   margin: 20px 0;
 }
-.copyright {
+footer .copyright {
   text-align: center;
+  padding-bottom: 20px;
 }
 .container {
   max-width: 1000px;
@@ -351,6 +368,124 @@ footer form {
     background-image: url("../img/home/home-mobile-jumbotron.png");
     background-repeat: no-repeat;
     background-size: cover;
+  }
+  h1 {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    font-size: 6.4rem;
+  }
+  .top-content {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 20px 20px;
+  }
+  .top-content .img-content {
+    max-width: 500px;
+    width: 100%;
+    background: url("..//Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/img/home/home-mobile-img-1.png");
+    text-indent: -9999px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .inverse-content {
+    display: flex;
+    flex-direction: column;
+  }
+  .inverse-content .img-content {
+    max-width: 500px;
+    width: 100%;
+    background: url("img/home/home-img-2.png");
+    text-indent: -9999px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .text-content {
+    display: flex;
+    max-width: 500px;
+    width: 100%;
+    flex-direction: column;
+    margin: 0;
+  }
+  .text-content h2 {
+    font-size: 2.4rem;
+    max-width: 500px;
+    width: 100%;
+    text-align: left;
+  }
+  .text-content p {
+    text-align: left;
+  }
+  .text-content button {
+    border: 1.5px solid #222;
+    padding: 15px 25px;
+    max-width: 500px;
+    width: 100%;
+    font-size: 1.6rem;
+  }
+  .project-header {
+    display: none;
+  }
+  .project-content p {
+    margin: 0 10px;
+  }
+  .project .mobile-img {
+    display: block;
+    max-width: 500px;
+    width: 100%;
+  }
+  .project h3 {
+    width: 90%;
+    right: 5%;
+    bottom: -20%;
+    left: 5%;
+    text-align: center;
+  }
+  .project .header-img {
+    max-width: 500px;
+    width: 100%;
+  }
+  footer {
+    display: flex;
+    padding-left: 20px;
+  }
+  footer .contact {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .contact .search-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    margin-bottom: 20px;
+  }
+  footer .contact .search-bar .form-input {
+    width: 300px;
+  }
+  footer .contact .search-bar h3 {
+    margin-bottom: 20px;
+  }
+  footer .contact .search-bar p {
+    margin-top: 10px;
+    font-size: 1.4rem;
+  }
+  footer .contact .state-info {
+    display: flex;
+    margin: 10px 0;
+  }
+  footer .contact h3 {
+    font-size: 2.4rem;
+    font-family: sans-serif;
+  }
+  footer .contact h4 {
+    font-size: 1.4rem;
+    font-family: sans-serif;
+    margin: 5px 0;
+  }
+  footer .copyright {
+    font-family: sans-serif;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: left;
   }
 }
 .container-services {
