Fixed responsive errors on Home page

--- a/css/index.css
+++ b/css/index.css
@@ -218,11 +218,12 @@ html {
 .text-content button {
   border: 1px solid #222;
   padding: 15px 25px;
-  width: 120px;
+  width: 135px;
   font-size: 1rem;
 }
 .img-content {
   width: 48%;
+  padding-left: 6px;
 }
 .main-content-bottom {
   display: flex;
@@ -383,7 +384,6 @@ footer .copyright {
     max-width: 500px;
     width: 100%;
     background: url("..//Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/img/home/home-mobile-img-1.png");
-    text-indent: -9999px;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -395,7 +395,6 @@ footer .copyright {
     max-width: 500px;
     width: 100%;
     background: url("img/home/home-img-2.png");
-    text-indent: -9999px;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -434,7 +433,7 @@ footer .copyright {
     width: 100%;
   }
   .project h3 {
-    width: 90%;
+    width: 77%;
     right: 5%;
     bottom: -20%;
     left: 5%;
