--- a/less/index.less
+++ b/less/index.less
@@ -173,7 +173,7 @@ html {
   button {
     border: 1px solid #222;
     padding: 15px 25px;
-    width: 120px;
+    width: 135px;
 
     font-size: 1rem;
     
@@ -183,6 +183,7 @@ html {
 
 .img-content {
   width: 48%;
+  padding-left: 6px;
 }
 
 
@@ -410,7 +411,7 @@ footer {
     max-width: 500px;
     width: 100%;
     background: url("..//Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/img/home/home-mobile-img-1.png");
-    text-indent: -9999px;
+    // text-indent: -9999px;
     background-repeat: no-repeat;
     background-size: cover;
     }
@@ -426,7 +427,7 @@ footer {
       max-width: 500px;
       width: 100%;
       background: url("img/home/home-img-2.png");
-      text-indent: -9999px;
+      // text-indent: -9999px;
       background-repeat: no-repeat;
       background-size: cover;
       }
@@ -478,7 +479,7 @@ footer {
     }
 
     h3 {
-      width: 90%;
+      width: 77%;
       right: 5%;
       bottom: -20%;
       left: 5%;
