--- a/less/index.less
+++ b/less/index.less
@@ -91,8 +91,34 @@ html {
     width: 1000px;
   }
 
+  .menu-close {
+    display: none;
+  }
+
+  @media @mobile {
+    max-width: 500px;
+  }
+
   .brand {
     font-size: 28px;
+  }
+
+  .dropdown a:hover,
+  .dropdown a:focus {
+    color: #504545;
+  }
+
+  .menu-close {
+    position: absolute;
+    top: 0.8%;
+    right: 5.3;
+    font-size: 6rem;
+    z-index: 2;
+
+
+    @media @mobile {
+      right: 7.5%;
+    }
   }
 
   nav {
@@ -104,8 +130,36 @@ html {
     color: white;
   }
 
+  .dropdown {
+    height: 100%;
+    widows: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: rgba(153, 165, 174, 0.8);
+    overflow-x: hidden;
+    transition: 0.3s;
+
+    a {
+      font-weight: bold;
+      padding: 0.85rem;
+      text-decoration: none;
+      font-size: 3.5rem;
+      color: white;
+      display: block; /* Display block instead of inline */
+      transition: 0.2s;
+    }
+
+
+  }
+
   .dropdown-content {
-    display: none;
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
   }
 
 
