Fixed Services less page

--- a/less/index.less
+++ b/less/index.less
@@ -659,10 +659,6 @@ footer {
   margin-left: 100px;
 }
 
-.container-services img {
-  // width: 1000px;
-}
-
 .top-paragraph {
   width: 80%;
   margin: 0 auto;
@@ -679,8 +675,8 @@ footer {
 .tabs-links {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  padding: 50px 0;
+  padding: 53px 194px;
+
 }
 
 //   - Tab selected background: #5E9FB9
@@ -702,7 +698,9 @@ footer {
   // border: 10px solid orange;
   justify-content: center;
   width: 100%; 
+  
 }
+  
 
 .tabs-link:hover {
   background-color: #222;
@@ -741,6 +739,8 @@ footer {
 
 }
 
+
+// END SERVICES CONTAINER
 
 
 
@@ -798,7 +798,7 @@ footer {
     font-size: 1rem;
     min-width: 160px;
 
-}
+  }
 }
 
 
