--- a/css/index.css
+++ b/css/index.css
@@ -584,8 +584,7 @@ footer .copyright {
 .tabs-links {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  padding: 50px 0;
+  padding: 53px 194px;
 }
 .tabs-link {
   border: 1px solid black;
